WebContentsVideoCaptureDevice resumes after crashed renderer is reloaded.

This is a regression fix. The fix itself is literally a one-line code
change. However, the problem has highlighted the need for additional
testing to prevent future breakage. Thus, this change includes two new
content_browsertests to: 1) ensure this regression fix holds; 2) test
that the general "re-targetting" logic works for the other non-crash
navigation use cases.

Bug: 916332
Change-Id: I4ec2e95d77c3b19fa7e9c44e24200f05bee4d2d2
Reviewed-on: https://chromium-review.googlesource.com/c/1383217
Reviewed-by: Takumi Fujimoto <takumif@chromium.org>
Commit-Queue: Yuri Wiitala <miu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617776}
Former-commit-id: 19da6931af266c51af0502016fc3057e5942fac6