content/browser/media/capture/web_contents_video_capture_device.cc
@@ -117,7 +117,7 @@ class WebContentsVideoCaptureDevice::FrameTracker
     DCHECK_CURRENTLY_ON(BrowserThread::UI);
 
     WebContents* const contents = web_contents();
-    if (!contents || contents->IsCrashed()) {
+    if (!contents) {
       return nullptr;
     }
 
